@@ -802,7 +802,9 @@ RPAWARDS=
 # LOGOUTMASK is an optional zappermask that the player must match in order 
 # to logout of the game, quit, or switch to another account character.  
 # Dropping the connection in the wrong state will keep the vulnerable player 
-# in game.  See AHELP ZAPPERMASK for more information.  
+# in game.  See AHELP ZAPPERMASK for more information on mask syntax. This
+# mask can OPTIONALLY be prefixed with a number of ticks to remain online
+# after connection is lost.
 # Example:
 # LOGOUTMASK=-LOCATION +OWNED +CLANOWNED +PRIV +ROOMSTR(Inn) +ROOMSTR(Hotel)
 LOGOUTMASK=
