@@ -605,12 +605,13 @@ materials for costuming are created using the Papermake skill.
 
 DECORATE=DECORATING
 DECORATING=<ABILITY>\
-Usage    : DECORATE MOUNT/HANG/STICK [ITEM NAME]\n\r\
+Usage    : DECORATE MOUNT/HANG/STICK/ETC. [ITEM NAME]\n\r\
 Example  : decorate mount picture\n\r\
 This skill allows the player to hang or mount an item on the wall of a room.  The item will blend \
 with the room description, and while it is still GETtable, it is protected from mass \
 commands like GET ALL.  Items mounted or hung will have their display text altered, whereas \
-items put up using STICK will not.
+items put up using STICK will not.  In addition to hang/mount, other options will become \
+available depending on level and expertise.
 
 DILIGENT_STUDYING=DILIGENTSTUDYING
 DILIGENTSTUDYING=<ABILITY>\
