@@ -8,6 +8,8 @@
   7. WHERE Archon command now supports MQL updates via WHERE UPDATE: ...
   8. Disease_Vampirism greatly expanded, and its features argument-controllable
   9. New INI entry DEFAULTABILITYARGS for setting default property/skill arguments.
+ 10. LOGOUTMASK now supports a tick argument for how long to keep the mob in game.
+ 11. Decorating is now recipe driven, and has numerous new options
 # Build 5.10.0 Release 9/23/2022
   1. New Scriptable functions: ROOMPC and AREAPC
   2. Caravans now have their own internal Directions (fore, back, right, left, up, down)
